Rest Controller v1.0 implemented